--- a/package.json
+++ b/package.json
@@ -3,11 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@mapbox/mapbox-sdk": "^0.11.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "mapbox-gl": "^1.12.0",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
+    "react-map-gl": "^5.2.9",
     "react-scripts": "3.4.3"
   },
   "scripts": {
